# simple-typed-lambda-calculus-hs

./: .gitignore  CHANGELOG.md  README.md  simple-typed-lambda-calculus.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
simple-typed-lambda-calculus-hs/: README.md
